<resources>
    <string name="app_name">SingleTeacherSchools</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="login_time">2017/03/13 01:54:00pm</string>
    <string name="advisor_name">Advisor Name</string>
    <string name="boys">Boys</string>
    <string name="girls">Girls</string>
    <string name="students_strength_actual">Students Strength Actual</string>
    <string name="total">Total</string>
    <string name="as_per_attendance">As per Attendance</string>
    <string name="advisor_last_visit_on">Advisor Last Visit on</string>
    <string name="last_visit_advisor">Last Visit Advisor</string>
    <string name="enter_details_here">Enter details here</string>
    <string name="advisor_report">Advisor Report</string>
    <string name="login">Login</string>
    <string name="continue_text">Continue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_images">Add Images</string>
    <string name="submit">Submit</string>
    <string name="get_all_report">http://www.webmyls.com/sts/get_all_adv_report.php</string>
    <string name="get_advisor_village_sanch_acharya">http://www.webmyls.com/sts/get_advisor_village_sanch_acharya.php</string>
    <string name="post_advisor_report">http://webmyls.com/sts/post_all_adv_report.php</string>
    <string name="upload_images">http://webmyls.com/sts/uploader.php</string>
    <string name="upload_image_path">http://webmyls.com/sts/uploads/</string>
    <string name="create_report">Create Report</string>
    <string name="view_report">View Report</string>
    <string name="new_location">New Location</string>
    <string name="no_reports_found">No Reports Found!</string>
    <string name="_1_of_30">1 of 30</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="location_name">Location Name</string>
    <string name="school_name">School Name</string>
    <string name="contact_person">Contact Person</string>
    <string name="contact_phone">Contact Phone</string>
    <string name="comments">Comments</string>
    <string name="report_new_location">http://webmyls.com/sts/post_new_location_report.php</string>
    <string name="get_advisor">http://webmyls.com/sts/get_advisor.php</string>
    <string name="get_village_sanch_acharya">http://webmyls.com/sts/get_village_sanch_acharya.php</string>
    <string name="acharya_in_uniform">Acharya in Uniform</string>
    <string name="black_board">Black board</string>
    <string name="corporate_name_board">Corporate Name Board</string>
    <string name="mats">Mats</string>
    <string name="solar_lamp">Solar Lamp</string>
    <string name="charts">Charts</string>
    <string name="syllabus">Syllabus</string>
    <string name="library_books">Library Books</string>
    <string name="medicine">Medicine</string>

    <string-array name="uniform">
        <!--<item>Acharya in Uniform</item>-->
        <item>Select</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="blackboard">
        <!--<item>Black board</item>-->
        <item>Select</item>
        <item>Available</item>
        <item>Damaged</item>
        <item>No</item>
    </string-array>

    <string-array name="corporate">
        <!--<item>Corporate Name Board</item>-->
        <item>Select</item>
        <item>Fixed</item>
        <item>No</item>
        <item>Not in Corporate</item>
    </string-array>

    <string-array name="mats">
        <!--<item>Mats</item>-->
        <item>Select</item>
        <item>Available</item>
        <item>Damaged</item>
        <item>No</item>
    </string-array>

    <string-array name="solar">
        <!--<item>Solar Lamp</item>-->
        <item>Select</item>
        <item>Available</item>
        <item>No</item>
        <item>Given for Repair</item>
    </string-array>

    <string-array name="charts">
        <!--<item>Charts</item>-->
        <item>Select</item>
        <item>Available</item>
        <item>No</item>
    </string-array>

    <string-array name="syllabus">
        <!--<item>Syllabus</item>-->
        <item>Select</item>
        <item>Following</item>
        <item>No</item>
    </string-array>

    <string-array name="library">
        <!--<item>Library Books</item>-->
        <item>Select</item>
        <item>Available Using</item>
        <item>No</item>
    </string-array>

    <string-array name="medicine">
        <!--<item>Medicine</item>-->
        <item>Select</item>
        <item>Available Giving</item>
        <item>No</item>
    </string-array>

</resources>
