<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_report"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.sts.singleteacherschool.ViewReportActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/pagerReport"
        android:layout_width="match_parent"
        android:paddingBottom="38dp"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>

    <TextView
        android:id="@+id/lblNoReportsFound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:background="@drawable/curvedborder_white"
        android:gravity="center"
        android:text="@string/no_reports_found"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/lnrNavigation"
        android:elevation="3dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblPrev"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:onClick="onPrevious"
            android:gravity="center"
            android:text="@string/prev"
            android:textSize="16dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_1_of_30"
            android:textSize="16dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/lblNext"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:onClick="onNext"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/next"
            android:textSize="16dp"
            android:textStyle="bold"/>
    </LinearLayout>

</FrameLayout>
