<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:layout_height="42dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="@color/colorPrimaryLight"
        android:background="#000000"
        android:text="@string/advisor_report" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingBottom="100dp"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                style="@style/formContainerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardview_orange"
                android:elevation="2dp"
                android:visibility="visible"
                card_view:cardCornerRadius="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/txtLoginTime"
                        style="@style/formEditTextStyle"
                        android:layout_width="match_parent"
                        android:focusable="false"
                        android:inputType="textPersonName"
                        tools:text="@string/login_time" />

                    <EditText
                        android:id="@+id/txtAdvisorName"
                        style="@style/formEditTextStyle"
                        android:layout_width="match_parent"
                        android:focusable="false"
                        android:inputType="textPersonName"
                        tools:text="@string/advisor_name" />

                    <Spinner
                        android:id="@+id/spinnerSanchayat"
                        style="@style/formEditTextStyle"
                        android:layout_width="match_parent" />

                    <Spinner
                        android:id="@+id/spinnerVillage"
                        style="@style/formEditTextStyle"
                        android:layout_width="match_parent" />

                    <Spinner
                        android:id="@+id/spinnerAcharya"
                        style="@style/formEditTextStyle"
                        android:layout_width="match_parent" />


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                style="@style/formContainerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardview_orange"
                android:elevation="2dp"
                android:visibility="visible"
                card_view:cardCornerRadius="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        style="@style/formTitleLabelStyle"
                        android:layout_width="match_parent"
                        android:text="@string/students_strength_actual" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/formLabelStyle"
                            android:layout_width="wrap_content"
                            android:text="@string/boys" />

                        <EditText
                            android:id="@+id/txtStrengthBoys"
                            style="@style/formEditTextStyle"
                            android:layout_width="match_parent"
                            android:focusable="false"
                            android:inputType="textPersonName" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/formLabelStyle"
                            android:layout_width="wrap_content"
                            android:text="@string/girls" />

                        <EditText
                            android:id="@+id/txtStrengtGirls"
                            style="@style/formEditTextStyle"
                            android:layout_width="match_parent"
                            android:focusable="false"
                            android:inputType="textPersonName" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/formLabelStyle"
                            android:layout_width="wrap_content"
                            android:text="@string/total" />

                        <EditText
                            android:id="@+id/txtStrengthTotal"
                            style="@style/formEditTextStyle"
                            android:layout_width="match_parent"
                            android:focusable="false"
                            android:inputType="textPersonName" />

                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                style="@style/formContainerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardview_orange"
                android:elevation="2dp"
                android:visibility="visible"
                card_view:cardCornerRadius="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/formTitleLabelStyle"
                        android:layout_width="match_parent"
                        android:text="@string/as_per_attendance" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/formLabelStyle"
                            android:layout_width="wrap_content"
                            android:text="@string/boys" />

                        <EditText
                            android:id="@+id/txtAttendanceBoys"
                            style="@style/formEditTextStyle"
                            android:layout_width="match_parent"
                            android:focusable="false"
                            android:inputType="textPersonName" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/formLabelStyle"
                            android:layout_width="wrap_content"
                            android:text="@string/girls" />

                        <EditText
                            android:id="@+id/txtAttendanceGirls"
                            style="@style/formEditTextStyle"
                            android:layout_width="match_parent"
                            android:focusable="false"
                            android:inputType="textPersonName" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/formLabelStyle"
                            android:layout_width="wrap_content"
                            android:text="@string/total" />

                        <EditText
                            android:id="@+id/txtAttendanceTotal"
                            style="@style/formEditTextStyle"
                            android:layout_width="match_parent"
                            android:focusable="false"
                            android:inputType="textPersonName" />

                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                style="@style/formContainerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardview_orange"
                android:elevation="2dp"
                android:visibility="visible"
                card_view:cardCornerRadius="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/txtDetails"
                        style="@style/formEditTextStyle"
                        android:layout_width="match_parent"
                        android:hint="@string/enter_details_here" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/formLabelStyle"
                            android:layout_width="wrap_content"
                            android:text="@string/advisor_last_visit_on" />

                        <EditText
                            android:id="@+id/txtAdvisorLastVisit"
                            style="@style/formEditTextStyle"
                            android:layout_width="match_parent"
                            android:focusable="false"
                            android:inputType="textPersonName" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/formLabelStyle"
                            android:layout_width="wrap_content"
                            android:text="@string/last_visit_advisor" />

                        <EditText
                            android:id="@+id/txtLastVisitAdvisor"
                            style="@style/formEditTextStyle"
                            android:layout_width="match_parent"
                            android:focusable="false"
                            android:inputType="textPersonName" />

                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>


</LinearLayout>
