<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/activity_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:elevation="2dp"
        card_view:cardCornerRadius="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:src="@drawable/logo"/>

            <TextView
                android:id="@+id/textView2"
                style="@style/loginLabelStyle"
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="Welcome to STS"/>

            <EditText
                android:id="@+id/txtUserID"
                style="@style/loginEditTextStyle"
                android:layout_width="match_parent"
                android:background="@drawable/curvedborder_orange_light"
                android:hint="@string/user_id"
                android:inputType="text"/>

            <EditText
                android:id="@+id/txtPassword"
                style="@style/loginEditTextStyle"
                android:layout_width="match_parent"
                android:background="@drawable/curvedborder_orange_light"
                android:hint="@string/password"
                android:inputType="textPassword"/>

            <TextView
                style="@style/loginLabelStyle"
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:onClick="onLogin"
                android:text="@string/login"
                android:textAllCaps="false"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>


    <TextView
        android:id="@+id/lblPoweredby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="onWebmylsClick"
        android:layout_alignParentBottom="true"
       />

</RelativeLayout>
